--- a/BE_THREAD/package.json
+++ b/BE_THREAD/package.json
@@ -12,7 +12,12 @@
    },
    "dependencies": {
       "@types/bcrypt": "^5.0.2",
+      "@types/cors": "^2.8.17",
       "bcrypt": "^5.1.1",
+      "cors": "^2.8.5",
+      "dotenv": "^16.3.1",
+      "joi": "^17.11.0",
+      "jsonwebtoken": "^9.0.2",
       "nodemon": "^3.0.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
