--- a/BE_THREAD/.env
+++ b/BE_THREAD/.env
@@ -3,7 +3,7 @@ hostDb=localhost
 portDb= 5432
 usernameDb= postgres
 passwordDb= root
-databases= circleDatabase
+databases= fixcirce
 
 # JWT
 JWT_SECRET= acong
