--- a/FE_THREAD/package.json
+++ b/FE_THREAD/package.json
@@ -17,6 +17,7 @@
     "@types/axios": "^0.14.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
